# myplaylist

./: README.md  pyproject.toml
myplaylist/music_app/: admin.py  forms.py  forms.py.orig  models.py  models.py.orig  urls.py  urls.py.orig  views.py  views.py.orig
myplaylist/music_app/templates/: appeal-card.html  appeal-table.html  auth_form.html  authentication_login.html  authentication_login.html.orig  base.html  edit-employee.html  edit-profile.html  edit_track.html  employee.html  employees-table.html  header.html  imp_base.html  orders-card.html  orders-list.html  sales-offer.html  tracks-table.html  tracks-table.html.orig  upload_track.html
myplaylist/myplaylist/: settings.py  urls.py
myplaylist/static/assets/css/: custom.css
